# web3-contest-watcher

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
fixtures/: cantina_opportunities_sample.html  dailywarden_sample.html  discord_messages_sample.json  immunefi_competition_sample.html  immunefi_explore_sample.html  sch_active_sample.html  sherlock_contests_sample.json
tests/: test_alert_logic.py  test_cantina_parse.py  test_dailywarden_parse.py  test_discord_parse.py  test_immunefi_parse.py  test_multisource.py  test_notifiers.py  test_sch_parse.py  test_sherlock_parse.py
watcher/: __init__.py  config.py  digest.py  models.py  run.py  store.py
watcher/notifier/: __init__.py  _format.py  _http.py  base.py  console.py  discord.py  email_smtp.py  multi.py  slack.py  telegram.py  webhook.py
watcher/sources/: __init__.py  base.py  cantina.py  dailywarden.py  discord.py  immunefi.py  sch.py  sherlock.py
